fix news text overlap if text is too long

--- a/src/css/newsPage.css
+++ b/src/css/newsPage.css
@@ -1,10 +1,10 @@
 .newsPage .card .card-body {
-  margin-top: -50px;
+
   height: 50px;
   background-color: #000;
   color: #FFF;
-  display: flex;
   align-items: center;
+  text-overflow: ellipsis;
 }
 
 .newsPage .card-footer {
